--- a/css/uie-button.css
+++ b/css/uie-button.css
@@ -236,17 +236,20 @@ color:#2991d6;
     border-radius: 0 3px 3px 0;
     height: 24px;
     line-height: 22px;
-    padding: 0 2px;
-	 position: relative;
+    padding: 0;
+    position: relative;
+    width: 15px;
 }
 .uie-dp-menu {
+    background: #ffffff none repeat scroll 0 0;
     display: block;
     left: 30px;
     list-style: outside none none;
     padding: 0;
-    position: relative;
-    top: 7px;
+    position: absolute;
+    top: 31px;
     width: 120px;
+    z-index: 9999;
 }
 .uie-dp-menu::before {
     border-bottom: 7px dashed #dadada;
@@ -933,3 +936,8 @@ input[type="radio"]:checked:not(old) + label > span > span {
 	background-image: url("../img/svg-file/ship.svg");
 }
 */
+/*------- Forms Element Drop Down -------*/
+
+.dropdownlist {
+    position: relative;
+}
