--- a/css/lib/jquery.mCustomScrollbar.css
+++ b/css/lib/jquery.mCustomScrollbar.css
@@ -314,14 +314,14 @@ Scroll bar Colors and Background
 
 	.mCSB_scrollTools .mCSB_buttonLeft,
 	.mCSB_scrollTools .mCSB_buttonRight{
-		background-image: url(../img/icons/v-scroll-arrow.png); 
+		background-image: url(../../img/icons/v-scroll-arrow.png); 
 		background-repeat: no-repeat;
 		 background-size: auto 10px;
 	
 	}
 	
 		.mCSB_scrollTools .mCSB_buttonUp,
-	.mCSB_scrollTools .mCSB_buttonDown{background-image: url(../img/icons/h-scroll-arrow.png); 
+	.mCSB_scrollTools .mCSB_buttonDown{background-image: url(../../img/icons/h-scroll-arrow.png); 
 		background-repeat: no-repeat; background-size: 10px auto;}
 
 
