--- a/css/style.css
+++ b/css/style.css
@@ -792,34 +792,60 @@ Panel
 	position:relative;
 	background:url("search-box-bg.jpg") repeat-x scroll center center transparent;
 }
+
 .dropdownlist .selected-listitem { 
 	cursor:pointer;
-	height:30px;
+	height:27px;
 	line-height:30px;
-	background:url(dropdown-icon.png) right 10px no-repeat;
 	border:1px solid #32AFD8;
 	padding:0 0 0 10px;
+}
+.drop-menu-list .dropdownlist .selected-listitem {
+    border: medium none;
+    color: #120e5b;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    padding: 0;
 }
 .dropdownlist .default-listitem { 
 	display:none;
 }
-.dropdownlist ul { 
-	position:absolute;
-	left:0;
-	background:#f5f5f5;
-	width:100%;
-	display:none;
-	z-index:100;
-	max-height:200px;
-	overflow-y:auto;
+.dropdownlist ul {
+    background: #fff none repeat scroll 0 0;
+    display: none;
+    left: 0;
+    max-height: 280px;
+    overflow-y: auto;
+    position: absolute;
+    width: 100%;
+    z-index: 100;
 }
 .dropdownlist ul li { 
-	border:1px solid #32AFD8;
+	border:1px solid #d8d8d8;
 	border-top:0;
 	display:block;
-	padding:7px 10px;
+	padding:10px;
 	cursor:pointer;
+	font-size:14px;
+	color:#5c5c5c;
 }
-.dropdownlist ul li:hover { 
-	background:#ccc;
+.dropdownlist ul li:hover {
+    background: #e0f3ff none repeat scroll 0 0;
+	color: #2991d6;
+}
+
+
+.selected-listitem.dropdown-box::before {
+    border-left: 6px solid #ffffff;
+    border-right: 6px solid #ffffff;
+    border-top: 7px dashed #373374;
+    content: "";
+    position: absolute;
+    right: 4px;
+    top: 13px;
+}
+a:focus, a:hover {
+    color: #2991D6;
+    text-decoration: none;
 }
