--- a/css/style.css
+++ b/css/style.css
@@ -701,10 +701,7 @@ Panel
 }
 
 /*----------Table Pagination-----------*/
-.pages-info {
-    color: #5c5c5c;
-    font-size: 12px;
-}
+
 .page a {
     border: 1px solid #D8D8D8;
     color: #120e5b;
@@ -740,6 +737,8 @@ Panel
     float: left;
     width: auto;
     padding: 0 10px;
+	    color: #5c5c5c;
+    font-size: 12px;
 }
 .page,
 .view {
@@ -810,6 +809,62 @@ Panel
     background-color: #120E5B;
     color: #FFFFFF;
 }
+.mobile-action-grp-btn{display:none;position:relative}
+.selected-listitem::before {
+    border-left: 5px solid #ffffff;
+    border-right: 5px solid #ffffff;
+    border-top: 5px solid #373374;
+    content: "";
+    position: absolute;
+    right: 14px;
+    top: 13px;
+}
+.action-grp {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #d8d8d8;
+    clear: both;
+    position: absolute;
+	
+    right: -1px;
+    top: 36px;
+   
+    z-index: 99;
+}
+.action-arrow {float:right;}
+.action-arrow a{   border-left: 1px solid #d8d8d8;
+    color: #120e5b;
+    display: block;
+    float: left;
+    line-height: 36px;
+    text-align: center;
+    width: 37px;
+}
+.action-grp p {
+    color: #120e5b;
+    font-size: 13px;
+}
+.mobile-action-grp-btn .app-action-group {
+    float: left;
+}
+.grid-specific {
+    border-bottom: 1px solid #d8d8d8;
+    padding: 10px;
+}
+.action-grp .app-action-group {
+    border: 1px solid #d8d8d8;
+    margin-top: 5px;
+	
+}
+.app-specific {padding:10px;}
+.grid-specific .app-action-group a{
+    background-color: #f6f6f6;}
+.action-grp .app-action-group a:hover{  background-color: #120e5b;}
+.action-grp .app-action-group a:first-child {
+    border: medium none;
+}
+.action-arrow.open {
+    background: #fff none repeat scroll 0 0;
+}
 /*---------- Table -----------*/
 
 .table-grid th:first-child {
@@ -860,6 +915,14 @@ Panel
 .table-grid th:first-child span,
 .table-grid tr td:first-child {
     padding: 0;
+}
+.table-grid td.disable {
+    background: #f6f6f6 none repeat scroll 0 0;
+    color: #c5c5c5;
+    cursor: not-allowed;
+}
+.table-grid tr.selected {
+    background-color: #e0f3ff;
 }
 /*------------------------------------*\
 Forms Element 
