--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,62 @@ Panel
     background-color: #120E5B;
     color: #FFFFFF;
 }
+.mobile-action-grp-btn{display:none;position:relative}
+.selected-listitem::before {
+    border-left: 5px solid #ffffff;
+    border-right: 5px solid #ffffff;
+    border-top: 5px solid #373374;
+    content: "";
+    position: absolute;
+    right: 14px;
+    top: 13px;
+}
+.action-grp {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #d8d8d8;
+    clear: both;
+    position: absolute;
+ 
+    right: -1px;
+    top: 36px;
+   
+    z-index: 99;
+}
+.action-arrow {float:right;}
+.action-arrow a{   border-left: 1px solid #d8d8d8;
+    color: #120e5b;
+    display: block;
+    float: left;
+    line-height: 36px;
+    text-align: center;
+    width: 37px;
+}
+.action-grp p {
+    color: #120e5b;
+    font-size: 13px;
+}
+.mobile-action-grp-btn .app-action-group {
+    float: left;
+}
+.grid-specific {
+    border-bottom: 1px solid #d8d8d8;
+    padding: 10px;
+}
+.action-grp .app-action-group {
+    border: 1px solid #d8d8d8;
+    margin-top: 5px;
+ 
+}
+.app-specific {padding:10px;}
+.grid-specific .app-action-group a{
+    background-color: #f6f6f6;}
+.action-grp .app-action-group a:hover{  background-color: #120e5b;}
+.action-grp .app-action-group a:first-child {
+    border: medium none;
+}
+.action-arrow.open {
+    background: #fff none repeat scroll 0 0;
+}
 /*---------- Table -----------*/
 
 .table-grid th:first-child {
@@ -860,6 +916,14 @@ Panel
 .table-grid th:first-child span,
 .table-grid tr td:first-child {
     padding: 0;
+}
+.table-grid td.disable {
+    background: #f6f6f6 none repeat scroll 0 0;
+    color: #c5c5c5;
+    cursor: not-allowed;
+}
+.table-grid td.selected {
+    background-color: #e0f3ff;
 }
 /*------------------------------------*\
 Forms Element 
@@ -1882,4 +1946,59 @@ input[type="radio"]:checked:not(old) + label > span > span {
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.1), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
     color: #ffffff;
     transition: all 0.5s ease 0s;
+}
+
+/*------- Forms Accordion   -------*/
+
+.accordion {
+    margin: 0;
+    padding: 0;
+	border:1px solid #d8d8d8;
+	border-top:none;
+	border-bottom:none;
+}
+
+.accordion-panel {
+    margin: 0;
+    padding: 0;
+}
+.accordion-header {
+    border-bottom: 1px solid #d8d8d8;
+    border-top: 1px solid #d8d8d8;
+    height: 28px;
+	padding:0 15px;
+	position:relative;
+}
+.accordion-header h3 {
+    color: #5c5c5c;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 24px;
+	width: 200px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.accordion-header span {
+    border-left: 1px solid #d8d8d8;
+    height: 28px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 30px;
+	
+}
+.accordion-header span i{
+border-left: 5px solid #ffffff;
+    border-right: 5px solid #ffffff;
+    border-top: 5px solid #373374;
+    content: "";
+    position: absolute;
+    right: 10px;
+    top: 11px;
+}
+.accordion-content {
+    font-size: 12px;
+    line-height: 20px;
+    margin: 20px 0;
 }
