--- a/css/lib/jquery-ui/jquery-ui.css
+++ b/css/lib/jquery-ui/jquery-ui.css
@@ -234,34 +234,36 @@ button.ui-button::-moz-focus-inner {
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next {
 	position: absolute;
-	top: 2px;
+	top: 0px;
 	width: 1.8em;
 	height: 1.8em;
 }
-.ui-datepicker .ui-datepicker-prev-hover,
-.ui-datepicker .ui-datepicker-next-hover {
-	top: 1px;
-}
+
 .ui-datepicker .ui-datepicker-prev {
-	left: 2px;
+    border-right: 1px solid #d8d8d8;
+    height: 43px;
+    top: 0;
+    width: 40px;
+	cursor:pointer;
 }
 .ui-datepicker .ui-datepicker-next {
 	right: 2px;
 }
-.ui-datepicker .ui-datepicker-prev-hover {
-	left: 1px;
+
+
+.ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span {
+    display: block;
+    height: 43px;
+    margin-left: 0;
+    margin-top: 0;
+    position: relative;
+    width: 33px;
 }
-.ui-datepicker .ui-datepicker-next-hover {
-	right: 1px;
-}
-.ui-datepicker .ui-datepicker-prev span,
-.ui-datepicker .ui-datepicker-next span {
-	display: block;
-	position: absolute;
-	left: 50%;
-	margin-left: -8px;
-	top: 50%;
-	margin-top: -8px;
+.ui-datepicker-next.ui-corner-all {
+    height: 43px;
+    width: 40px;
+    border-left: 1px solid #d8d8d8;
+	cursor:pointer;
 }
 .ui-datepicker .ui-datepicker-title {
 	margin: 0 2.3em;
@@ -273,9 +275,13 @@ button.ui-button::-moz-focus-inner {
 	margin: 1px 0;
 }
 .ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year {
-    border: 1px solid #000000;
+    border: 1px solid #d8d8d8;
+    color: #120e5b;
+    font-size: 12px;
     height: 35px;
     margin: 0 5px;
+    padding: 0 10px;
+    text-align: left;
     width: 90px;
 }
 .ui-datepicker table {
@@ -853,16 +859,16 @@ body .ui-tooltip {
 }
 .ui-widget-content {
 	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
+	background: #ffffff;
 	color: #222222;
 }
 .ui-widget-content a {
 	color: #222222;
 }
 .ui-widget-header {
-	border: 1px solid #aaaaaa;
-	color: #222222;
-	font-weight: bold;
+    border-bottom: 1px solid #d8d8d8;
+    color: #222222;
+    font-weight: bold;
 }
 .ui-widget-header a {
 	color: #222222;
@@ -914,12 +920,10 @@ border:1px solid #2991D6;
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight,
-.ui-widget-content .ui-state-highlight,
-.ui-widget-header .ui-state-highlight {
-	border: 1px solid #120e5b;
-	background: #fbf9ee url("images/ui-bg_glass_55_fbf9ee_1x400.png") 50% 50% repeat-x;
-	color: #363636;
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
+    background: #2991d6 none repeat scroll 0 0;
+    border: 1px solid #2991d6;
+    color: #ffffff;
 }
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
@@ -930,7 +934,7 @@ border:1px solid #2991D6;
 .ui-widget-content .ui-state-error,
 .ui-widget-header .ui-state-error {
 	border: 1px solid #cd0a0a;
-	background: #fef1ec url("images/ui-bg_glass_95_fef1ec_1x400.png") 50% 50% repeat-x;
+	background: #fef1ec;
 	color: #cd0a0a;
 }
 .ui-state-error a,
@@ -974,31 +978,16 @@ border:1px solid #2991D6;
 	width: 16px;
 	height: 16px;
 }
-.ui-icon,
-.ui-widget-content .ui-icon {
-	background-image: url("images/ui-icons_222222_256x240.png");
+.ui-icon.ui-icon-circle-triangle-w {
+    background: rgba(0, 0, 0, 0) url("../../../img/icons/next.png") no-repeat scroll 10px 12px;
 }
-.ui-widget-header .ui-icon {
-	background-image: url("images/ui-icons_222222_256x240.png");
+.ui-icon.ui-icon-circle-triangle-e {
+    background: rgba(0, 0, 0, 0) url("../../../img/icons/next.png") no-repeat scroll 4px 12px;
+    transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	
 }
-.ui-state-default .ui-icon {
-	background-image: url("images/ui-icons_888888_256x240.png");
-}
-.ui-state-hover .ui-icon,
-.ui-state-focus .ui-icon {
-	background-image: url("images/ui-icons_454545_256x240.png");
-}
-.ui-state-active .ui-icon {
-	background-image: url("images/ui-icons_454545_256x240.png");
-}
-.ui-state-highlight .ui-icon {
-	background-image: url("images/ui-icons_2e83ff_256x240.png");
-}
-.ui-state-error .ui-icon,
-.ui-state-error-text .ui-icon {
-	background-image: url("images/ui-icons_cd0a0a_256x240.png");
-}
-
 /* positioning */
 .ui-icon-blank { background-position: 16px 16px; }
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -1183,14 +1172,14 @@ border:1px solid #2991D6;
 
 /* Overlays */
 .ui-widget-overlay {
-	background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+	background: #aaaaaa;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 }
 .ui-widget-shadow {
 	margin: -8px 0 0 -8px;
 	padding: 8px;
-	background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+	background: #aaaaaa;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 	border-radius: 8px;
@@ -1200,10 +1189,15 @@ border:1px solid #2991D6;
       -webkit-appearance: none;        /*Removes default chrome and safari style*/
       -moz-appearance: none;          /* Removes Default Firefox style*/
       background: url(../../../img/icons/h-scroll-arrow.png) no-repeat;         /*Adds background-image*/
-      background-position: 82px 7px;                /*Position of the background-image*/
+      background-position: 70px 10px;                /*Position of the background-image*/
       width: 100px;                /*Width of select dropdown to give space for arrow image*/
 }
-.ui-datepicker-title select::after{
-background:red;
-position:absolute;
+#datepicker::before{
+border-left: 5px solid #ffffff;
+    border-right: 5px solid #ffffff;
+    border-top: 5px solid #373374;
+    content: "";
+    position: absolute;
+    right: 14px;
+    top: 13px;
 }
